botones-radius, cs-contact cambiado

--- a/version-actual/website/index.html
+++ b/version-actual/website/index.html
@@ -23,7 +23,7 @@
 
   <body>
     <!-- ============================================ -->
-    <!--                 Navigation                   -->
+    <!--                 Navigation    -cta.css        -->
     <!-- ============================================ -->
 
     <section class="header hero">
@@ -40,7 +40,7 @@
       </div>
 
       <!-- ============================================ -->
-      <!--              Navbar y video              -->
+      <!--              Navbar y video     -navbar.css    -->
       <!-- ============================================ -->
       <div id="video-wrapper">
         <video autoplay muted loop id="video-background">
@@ -72,13 +72,13 @@
           </li>
           <li class="nav__item"><a href="pages/timetable.html" class="nav__link">Tabla</a></li>
           <li class="nav__item">
-            <a href="pages/timetable.html#cs-contact-242" class="nav__link">Formulario</a>
+            <a href="pages/timetable.html#cs-contact" class="nav__link">Formulario</a>
           </li>
         </ul>
       </div>
     </nav>
     <!-- ============================================ -->
-    <!--               Why Choose Us                  -->
+    <!--               Why Choose Us  -whyUsSection.css -->
     <!-- ============================================ -->
 
     <section id="why-choose-us">
@@ -270,7 +270,7 @@
     </section>
 
     <!-- ============================================ -->
-    <!--                  Services                    -->
+    <!--                  Services             -about.css       -->
     <!-- ============================================ -->
 
     <section id="services">
@@ -415,7 +415,7 @@
     </section>
 
     <!-- ============================================ -->
-    <!--                   Speakers Section              -->
+    <!--                   Speakers Section        -speakers.css      -->
     <!-- ============================================ -->
 
     <div class="section-intro">
@@ -609,7 +609,7 @@
     </section>
 
     <!-- ============================================ -->
-    <!--                   Sponsor Logos              -->
+    <!--                   Sponsor Logos        -logo-slider.css      -->
     <!-- ============================================ -->
 
     <div class="logo-slider">
@@ -681,7 +681,7 @@
     </div>
 
     <!-- ============================================ -->
-    <!--                   Pricing                    -->
+    <!--                   Pricing          -pricing.css          -->
     <!-- ============================================ -->
 
     <section id="pricing-section">
@@ -1104,7 +1104,7 @@
     </section>
 
     <!-- ============================================ -->
-    <!--                   Contact                    -->
+    <!--                   Contact        -contact.css            -->
     <!-- ============================================ -->
 
     <section id="contact">
@@ -1112,7 +1112,7 @@
         <!--Form-->
         <form
           class="cs-form"
-          id="cs-form-1333"
+          id="cs-form"
           name="Contact Form"
           method="post"
         >
@@ -1121,14 +1121,14 @@
             <h2 class="cs-title">Cualquier Duda</h2>
           </div>
           <label class="cs-label">
-            Name
+            Nombre
             <input
               class="cs-input"
               required
               type="text"
-              id="name-1333"
+              id="name"
               name="name"
-              placeholder="Name"
+              placeholder="Nombre"
             />
           </label>
           <label class="cs-label cs-email">
@@ -1137,34 +1137,34 @@
               class="cs-input"
               required
               type="email"
-              id="email-1333"
+              id="email"
               name="email"
               placeholder="Email"
             />
           </label>
           <label class="cs-label cs-phone">
-            Phone
+            Teléfono
             <input
               class="cs-input"
               required
               type="number"
-              id="phone-1333"
+              id="phone"
               name="phone"
-              placeholder="Phone"
+              placeholder="Teléfono"
             />
           </label>
           <label class="cs-label">
-            Message
+            Mensaje
             <textarea
               class="cs-input cs-textarea"
               required
               name="Message"
-              id="message-1333"
-              placeholder="Write message..."
+              id="message"
+              placeholder="Dejanos tus dudas..."
             ></textarea>
           </label>
           <button class="cs-button-solid cs-submit" type="submit">
-            Schedule Appointment
+            Enviar formulario
           </button>
         </form>
         <div class="cs-content">
@@ -1252,7 +1252,7 @@
     </section>
 
     <!-- ============================================ -->
-    <!--                   Footer                     -->
+    <!--                   Footer            -footer.css         -->
     <!-- ============================================ -->
     <footer id="footer">
       <!--olas-->
