--- a/version-actual/website/pages/timetable.html
+++ b/version-actual/website/pages/timetable.html
@@ -36,7 +36,7 @@
             <a href="timetable.html" class="nav__link">Calendario</a>
           </li>
           <li class="nav__item">
-            <a href="form.html#cs-contact-242" class="nav__link">Formulario</a>
+            <a href="form.html#cs-contact" class="nav__link">Formulario</a>
           </li>
         </ul>
       </div>
