--- a/version-actual/website/pages/form.html
+++ b/version-actual/website/pages/form.html
@@ -32,7 +32,7 @@
           </li>
           <li class="nav__item"><a href="timetable.html" class="nav__link">Calendario</a></li>
           <li class="nav__item">
-            <a href="#cs-contact-242" class="nav__link">Formulario</a>
+            <a href="#cs-contact" class="nav__link">Formulario</a>
           </li>
         </ul>
       </div>
@@ -171,7 +171,7 @@
     <!--                Contact Form                  -->
     <!-- ============================================ -->
 
-    <section id="cs-contact-242">
+    <section id="cs-contact">
       <div class="cs-container">
         <div class="cs-content">
           <span class="cs-topper">Interesad@ ?</span>
