--- a/version-actual/website/index.html
+++ b/version-actual/website/index.html
@@ -14,11 +14,7 @@
     <link rel="stylesheet" href="css/logo-slider.css" />
     <link rel="stylesheet" href="css/speakers.css" />
     <link rel="stylesheet" href="css/cta.css" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-    />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
   </head>
 
   <body>
@@ -53,7 +49,7 @@
     <nav class="sticky navbar">
       <div class="brand display__logo">
         <a href="#top" class="nav__link">
-          <img src="../images/logos/Ecosurf/eco-surf-logo-w-1.png"
+          <img src="../images/logos/Ecosurf/eco-surf-logo-w-1.png" alt="logo"
         /></a>
       </div>
 
@@ -102,7 +98,7 @@
               loading="lazy"
               decoding="async"
               src="../images/stock/surfers2.jpg"
-              alt="kid"
+              alt="playa"
               width="647"
               height="600"
             />
@@ -123,7 +119,7 @@
               loading="lazy"
               decoding="async"
               src="../images/stock/surfers2.jpg"
-              alt="kid"
+              alt="playa"
               width="320"
               height="320"
             />
@@ -134,7 +130,7 @@
             loading="lazy"
             decoding="async"
             src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/flower3.svg"
-            alt="graphic"
+            alt="flor"
             width="153"
             height="148"
             aria-hidden="true"
@@ -145,7 +141,7 @@
             loading="lazy"
             decoding="async"
             src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/squiggle4.svg"
-            alt="graphic"
+            alt="squiggle"
             width="215"
             height="61"
             aria-hidden="true"
@@ -197,7 +193,7 @@
                   aria-hidden="true"
                   src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/direction.svg"
                   decoding="async"
-                  alt="icon"
+                  alt="icon direction"
                   width="36"
                   height="36"
                   loading="lazy"
@@ -219,7 +215,7 @@
                   aria-hidden="true"
                   src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/target.svg"
                   decoding="async"
-                  alt="icon"
+                  alt="icon target"
                   width="36"
                   height="36"
                   loading="lazy"
@@ -291,7 +287,7 @@
               loading="lazy"
               decoding="async"
               src="../images/stock/vertical1.jpg"
-              alt="people standing"
+              alt="mar"
               width="605"
               height="690"
             />
@@ -317,7 +313,7 @@
                   loading="lazy"
                   decoding="async"
                   src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/computer-gold.svg"
-                  alt="icon"
+                  alt="icon computer"
                   width="32"
                   height="32"
                 />
@@ -341,7 +337,7 @@
                   loading="lazy"
                   decoding="async"
                   src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/calendar-gold.svg"
-                  alt="icon"
+                  alt="icon calendario"
                   width="32"
                   height="32"
                 />
@@ -366,7 +362,7 @@
                   loading="lazy"
                   decoding="async"
                   src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/map-pin-gold.svg"
-                  alt="icon"
+                  alt="icon mapa"
                   width="32"
                   height="32"
                 />
@@ -391,7 +387,7 @@
                   loading="lazy"
                   decoding="async"
                   src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/map-pin-gold-2.svg"
-                  alt="icon"
+                  alt="icon ubicacion"
                   width="32"
                   height="32"
                 />
@@ -441,7 +437,7 @@
           <div class="img-container">
             <img
               src="../images/artists/Emmy-Noether-young.jpg"
-              alt="Event image"
+              alt="Emmy Noether"
             />
           </div>
 
@@ -470,7 +466,7 @@
           <div class="img-container">
             <img
               src="../images/artists/Albert_Einstein_Head.jpg"
-              alt="Event image"
+              alt="Albert Einstein"
             />
           </div>
 
@@ -498,7 +494,7 @@
           <div class="img-container">
             <img
               src="../images/artists/richard-feynman-2.jpg"
-              alt="Event image"
+              alt="richard feynman"
             />
           </div>
 
@@ -523,7 +519,7 @@
         <!-- Item 4 -->
         <div class="item-container">
           <div class="img-container">
-            <img src="../images/artists/juan-carlos.jpeg" alt="Event image" />
+            <img src="../images/artists/juan-carlos.jpeg" alt="juan carlos" />
           </div>
 
           <div class="body-container">
@@ -551,7 +547,7 @@
         <!-- Item 5 -->
         <div class="item-container">
           <div class="img-container">
-            <img src="../images/artists/angela-davis.jpeg" alt="Event image" />
+            <img src="../images/artists/angela-davis.jpeg" alt="angela davis" />
           </div>
 
           <div class="body-container">
@@ -581,7 +577,7 @@
           <div class="img-container">
             <img
               src="../images/artists/natalia-vaitekevich.jpeg"
-              alt="Event image"
+              alt="natalia vaitekevich"
             />
           </div>
 
@@ -615,67 +611,67 @@
     <div class="logo-slider">
       <div class="logo-slide-track">
         <div class="slide">
-          <img src="../images/logos/Billabong-logo.png" alt="" />
+          <img src="../images/logos/Billabong-logo.png" alt="marca Billabong" />
         </div>
         <div class="slide">
-          <img src="../images/logos/quicksilver-logo.png" alt="" />
+          <img src="../images/logos/quicksilver-logo.png" alt="marca quicksilver" />
         </div>
         <div class="slide">
-          <img src="../images/logos/Oakley_logo.svg.png" alt="" />
+          <img src="../images/logos/Oakley_logo.svg.png" alt="marca Oakley" />
         </div>
         <div class="slide">
-          <img src="../images/logos/redbull-logo.png" alt="" />
+          <img src="../images/logos/redbull-logo.png" alt="marca redbull" />
         </div>
         <div class="slide">
-          <img src="../images/logos/columbia.png" alt="" />
+          <img src="../images/logos/columbia.png" alt="marca columbia" />
         </div>
         <div class="slide">
-          <img src="../images/logos/element-logo.png" alt="" />
+          <img src="../images/logos/element-logo.png" alt="marca element" />
         </div>
         <div class="slide">
-          <img src="../images/logos/emblem-Vans.jpg" alt="" />
+          <img src="../images/logos/emblem-Vans.jpg" alt="marca Vans" />
         </div>
         <div class="slide">
-          <img src="../images/logos/ONeill-logo.png" alt="" />
+          <img src="../images/logos/ONeill-logo.png" alt="marca ONeill" />
         </div>
         <div class="slide">
-          <img src="../images/logos/ripcurl-logo.png" alt="" />
+          <img src="../images/logos/ripcurl-logo.png" alt="marca ripcurl" />
         </div>
         <div class="slide">
-          <img src="../images/logos/volcom-2.svg" alt="" />
+          <img src="../images/logos/volcom-2.svg" alt="marca volcom" />
         </div>
         <div class="slide">
-          <img src="../images/logos/ministerio-cultura-deporte.png" alt="" />
+          <img src="../images/logos/ministerio-cultura-deporte.png" alt="marca ministerio-cultura-deporte" />
         </div>
         <div class="slide">
-          <img src="../images/logos/nextgeneu_en.jpg" alt="" />
+          <img src="../images/logos/nextgeneu_en.jpg" alt="marca nextgeneu" />
         </div>
         <div class="slide">
-          <img src="../images/logos/ods.jpg" alt="" />
+          <img src="../images/logos/ods.jpg" alt="marca ods" />
         </div>
         <div class="slide">
-          <img src="../images/logos/Ecosurf/eco-surf-logo-b-1.png" alt="" />
+          <img src="../images/logos/Ecosurf/eco-surf-logo-b-1.png" alt="marca eco-surf" />
         </div>
         <div class="slide">
-          <img src="../images/logos/mahou_1200_color.png" alt="" />
+          <img src="../images/logos/mahou_1200_color.png" alt="marca mahou" />
         </div>
         <div class="slide">
-          <img src="../images/logos/Gillette-logo.png" alt="" />
+          <img src="../images/logos/Gillette-logo.png" alt="marca Gillette" />
         </div>
         <div class="slide">
-          <img src="../images/logos/GoPro_logo.svg.png" alt="" />
+          <img src="../images/logos/GoPro_logo.svg.png" alt="marca GoPro"marca  />
         </div>
         <div class="slide">
-          <img src="../images/logos/aws-logo.png" alt="" />
+          <img src="../images/logos/aws-logo.png" alt="marca aws" />
         </div>
         <div class="slide">
-          <img src="../images/logos/North-Face-Logo.png" alt="" />
+          <img src="../images/logos/North-Face-Logo.png" alt="marca North-Face" />
         </div>
         <div class="slide">
-          <img src="../images/logos/ies_el_lago logo.jpg" alt="" />
+          <img src="../images/logos/ies_el_lago logo.jpg" alt="marca ies_el_lago" />
         </div>
         <div class="slide">
-          <img src="../images/logos/prime-drink-logo.png" alt="" />
+          <img src="../images/logos/prime-drink-logo.png" alt="marca prime" />
         </div>
       </div>
     </div>
