--- a/version-actual/website/pages/timetable.html
+++ b/version-actual/website/pages/timetable.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/navbar.css" />
     <link rel="stylesheet" href="../css/footer.css" />
     <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
   </head>
   <body>
     <!-- ============================================ -->
