--- a/version-actual/website/index.html
+++ b/version-actual/website/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/speakers.css" />
     <link rel="stylesheet" href="css/cta.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
+    <script src="js/script.js"></script>
   </head>
 
   <body>
