--- a/version-actual/website/pages/form.html
+++ b/version-actual/website/pages/form.html
@@ -59,7 +59,7 @@
             <picture class="cs-picture">
               <img
                 decoding="async"
-                src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/day-care-review.png"
+                src="../../images/artists/ana maria.jpg"
                 alt="person"
                 width="413"
                 height="374"
