--- a/version-actual/website/pages/timetable.html
+++ b/version-actual/website/pages/timetable.html
@@ -63,7 +63,7 @@
           </div>
 
           <div class="event-timing">
-            <img src="images/time.png" alt="" /> 10:00 am
+            <img src="images/time.png" alt="" /> <div>10:00 am</div>
           </div>
         </div>
       </div>
@@ -87,7 +87,7 @@
           </div>
 
           <div class="event-timing">
-            <img src="images/time.png" alt="" /> 9:00 am
+            <img src="images/time.png" alt="" /> <div>9:00 am</div>
           </div>
         </div>
       </div>
@@ -111,7 +111,7 @@
           </div>
 
           <div class="event-timing">
-            <img src="images/time.png" alt="" /> 11:00 am
+            <img src="images/time.png" alt="" /> <div>11:00 am</div>
           </div>
         </div>
       </div>
@@ -135,7 +135,7 @@
           </div>
 
           <div class="event-timing">
-            <img src="images/time.png" alt="" /> 10:00 am
+            <img src="images/time.png" alt="" /> <div>10:00 am</div>
           </div>
         </div>
       </div>
@@ -158,7 +158,7 @@
           </div>
 
           <div class="event-timing">
-            <img src="images/time.png" alt="" /> 11:30 am
+            <img src="images/time.png" alt="" /> <div>11:30 am</div>
           </div>
         </div>
       </div>
@@ -181,7 +181,7 @@
           </div>
 
           <div class="event-timing">
-            <img src="images/time.png" alt="" /> 9:00 am
+            <img src="images/time.png" alt="" /> <div>9:00 am</div>
           </div>
         </div>
       </div>
