update fs for deploys

--- a/version-actual/pages/form.html
+++ b/version-actual/pages/form.html
@@ -17,7 +17,7 @@
     <nav class="sticky navbar">
       <div class="brand display__logo">
         <a href="../index.html" class="nav__link">
-          <img src="../../images/logos/Ecosurf/eco-surf-logo-w-1.png"
+          <img src="../images/logos/Ecosurf/eco-surf-logo-w-1.png"
         /></a>
       </div>
 
@@ -59,7 +59,7 @@
             <picture class="cs-picture">
               <img
                 decoding="async"
-                src="../../images/artists/ana maria.jpg"
+                src="../images/artists/ana maria.jpg"
                 alt="person"
                 width="413"
                 height="374"
@@ -341,7 +341,7 @@
               aria-hidden="true"
               loading="lazy"
               decoding="async"
-              src="../../images/stock/surfer-girl.jpg"
+              src="../images/stock/surfer-girl.jpg"
               alt="google map"
               width="462"
               height="438"
