--- a/version-actual/pages/timetable.html
+++ b/version-actual/pages/timetable.html
@@ -17,7 +17,7 @@
     <nav class="sticky navbar" style="background-color: rgba(0, 0, 0, 0.74)">
       <div class="brand display__logo">
         <a href="../index.html" class="nav__link">
-          <img src="../../images/logos/Ecosurf/eco-surf-logo-w-1.png"
+          <img src="../images/logos/Ecosurf/eco-surf-logo-w-1.png"
         /></a>
       </div>
 
@@ -195,7 +195,7 @@
       <h2 class="video-title">Video de Nuestro Sponsor DC</h2>
       <div class="video-container">
         <video controls>
-          <source src="../../video/surf-video-caption.mp4" type="video/mp4" />
+          <source src="../video/surf-video-caption.mp4" type="video/mp4" />
           Tu navegador no soporta video HTML5.
         </video>
         <br>
