botones timetable, enlaces

--- a/version-actual/pages/timetable.html
+++ b/version-actual/pages/timetable.html
@@ -63,7 +63,7 @@
           </div>
 
           <div class="event-timing">
-            <img src="images/time.png" alt="" /> 10:00 am
+            <i class="fas fa-clock"></i> <a href="../index.html#pricing-section">10:00 am</a>
           </div>
         </div>
       </div>
@@ -87,7 +87,7 @@
           </div>
 
           <div class="event-timing">
-            <img src="images/time.png" alt="" /> 9:00 am
+            <i class="fas fa-clock"></i> <a href="../index.html#pricing-section">9:00 am</a>
           </div>
         </div>
       </div>
@@ -111,7 +111,7 @@
           </div>
 
           <div class="event-timing">
-            <img src="images/time.png" alt="" /> 11:00 am
+            <i class="fas fa-clock"></i> <a href="../index.html#pricing-section">11:00 am</a>
           </div>
         </div>
       </div>
@@ -135,7 +135,7 @@
           </div>
 
           <div class="event-timing">
-            <img src="images/time.png" alt="" /> 10:00 am
+            <i class="fas fa-clock"></i> <a href="../index.html#pricing-section">10:00 am</a>
           </div>
         </div>
       </div>
@@ -158,7 +158,7 @@
           </div>
 
           <div class="event-timing">
-            <img src="images/time.png" alt="" /> 11:30 am
+            <i class="fas fa-clock"></i> <a href="../index.html#pricing-section">11:30 am</a>
           </div>
         </div>
       </div>
@@ -181,7 +181,7 @@
           </div>
 
           <div class="event-timing">
-            <img src="images/time.png" alt="" /> 9:00 am
+            <i class="fas fa-clock"></i> <a href="../index.html#pricing-section">9:00 am</a>
           </div>
         </div>
       </div>
