--- a/version-actual/index.html
+++ b/version-actual/index.html
@@ -68,7 +68,7 @@
           </li>
           <li class="nav__item"><a href="pages/timetable.html" class="nav__link">Tabla</a></li>
           <li class="nav__item">
-            <a href="pages/timetable.html#cs-contact" class="nav__link">Formulario</a>
+            <a href="pages/form.html" class="nav__link">Formulario</a>
           </li>
         </ul>
       </div>
