--- a/version-actual/index.html
+++ b/version-actual/index.html
@@ -66,7 +66,7 @@
           <li class="nav__item">
             <a href="#section_3" class="nav__link">Ponentes</a>
           </li>
-          <li class="nav__item"><a href="pages/timetable.html" class="nav__link">Tabla</a></li>
+          <li class="nav__item"><a href="pages/timetable.html" class="nav__link">Calendario</a></li>
           <li class="nav__item">
             <a href="pages/form.html" class="nav__link">Formulario</a>
           </li>
