--- a/version-actual/pages/timetable.html
+++ b/version-actual/pages/timetable.html
@@ -8,13 +8,17 @@
     <link rel="stylesheet" href="../css/navbar.css" />
     <link rel="stylesheet" href="../css/footer.css" />
     <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    />
   </head>
   <body>
     <!-- ============================================ -->
     <!--                   Navigation                     -->
     <!-- ============================================ -->
-    <nav class="sticky navbar" style="background-color: rgba(0, 0, 0, 0.74)">
+    <nav class="sticky navbar">
       <div class="brand display__logo">
         <a href="../index.html" class="nav__link">
           <img src="../images/logos/Ecosurf/eco-surf-logo-w-1.png"
@@ -63,7 +67,8 @@
           </div>
 
           <div class="event-timing">
-            <i class="fas fa-clock"></i> <a href="../index.html#pricing-section">10:00 am</a>
+            <i class="fas fa-clock"></i>
+            <a href="../index.html#pricing-section">10:00 am</a>
           </div>
         </div>
       </div>
@@ -87,7 +92,8 @@
           </div>
 
           <div class="event-timing">
-            <i class="fas fa-clock"></i> <a href="../index.html#pricing-section">9:00 am</a>
+            <i class="fas fa-clock"></i>
+            <a href="../index.html#pricing-section">9:00 am</a>
           </div>
         </div>
       </div>
@@ -111,7 +117,8 @@
           </div>
 
           <div class="event-timing">
-            <i class="fas fa-clock"></i> <a href="../index.html#pricing-section">11:00 am</a>
+            <i class="fas fa-clock"></i>
+            <a href="../index.html#pricing-section">11:00 am</a>
           </div>
         </div>
       </div>
@@ -135,7 +142,8 @@
           </div>
 
           <div class="event-timing">
-            <i class="fas fa-clock"></i> <a href="../index.html#pricing-section">10:00 am</a>
+            <i class="fas fa-clock"></i>
+            <a href="../index.html#pricing-section">10:00 am</a>
           </div>
         </div>
       </div>
@@ -158,7 +166,8 @@
           </div>
 
           <div class="event-timing">
-            <i class="fas fa-clock"></i> <a href="../index.html#pricing-section">11:30 am</a>
+            <i class="fas fa-clock"></i>
+            <a href="../index.html#pricing-section">11:30 am</a>
           </div>
         </div>
       </div>
@@ -181,7 +190,8 @@
           </div>
 
           <div class="event-timing">
-            <i class="fas fa-clock"></i> <a href="../index.html#pricing-section">9:00 am</a>
+            <i class="fas fa-clock"></i>
+            <a href="../index.html#pricing-section">9:00 am</a>
           </div>
         </div>
       </div>
@@ -198,15 +208,37 @@
           <source src="../video/surf-video-caption.mp4" type="video/mp4" />
           Tu navegador no soporta video HTML5.
         </video>
-        <br>
+        <br />
         <p class="transcription-text">
-          I remember buying my first pair of DKs. Danny Madison, Travis Pastrana.
-          They started doing innovative, crazy stuff. Felt special to be on that
-          team back then and even now, I'm stoked to be a part of this team again,
-          and all these guys on the team are the next generation. They're ripping
-          and it's just going to get bigger and better. Passion after surfing.
-          Feels like it did back when I started right for DC. You know, just pure
-          stoked. Any is possible. No boundaries.
+          El video promocional de DC, la marca de surf y skate, comienza con
+          escenas de miembros del equipo realizando actividades de deportes
+          extremos al aire libre. Mientras se muestran estas imágenes, se
+          escucha la voz en off de uno de los miembros del equipo, quien
+          comparte sus recuerdos y emociones sobre pertenecer al equipo de DC.
+          <span
+            >"I remember buying my first pair of DKs. Danny Madison, Travis
+            Pastrana. They started doing innovative, crazy stuff. Felt special
+            to be on that team back then and even now, I'm stoked to be a part
+            of this team again, and all these guys on the team are the next
+            generation."</span
+          >
+          Habla de la emoción que sintió al comprar su primer par de DKs y
+          menciona a figuras influyentes como Danny Madison y Travis Pastrana,
+          quienes inspiraron con sus innovaciones y locuras. Expresa su gratitud
+          por formar parte del equipo nuevamente y elogia el talento y la pasión
+          de los miembros actuales, considerándolos la próxima generación de
+          talentos.
+          <span
+            >"They're ripping and it's just going to get bigger and better.
+            Passion after surfing. Feels like it did back when I started right
+            for DC. You know, just pure stoked. Any is possible. No
+            boundaries."</span
+          >
+          La narración resalta la pasión por el surf y la sensación de
+          entusiasmo que experimenta al formar parte de la familia DC.
+          Finalmente, el video culmina con imágenes épicas de surf, acompañadas
+          de una banda sonora emocionante, transmitiendo una sensación de
+          libertad, emoción y posibilidad ilimitada.
         </p>
       </div>
     </section>
