--- a/version-actual/index.html
+++ b/version-actual/index.html
@@ -14,8 +14,11 @@
     <link rel="stylesheet" href="css/logo-slider.css" />
     <link rel="stylesheet" href="css/speakers.css" />
     <link rel="stylesheet" href="css/cta.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
-    <script src="js/script.js"></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    />
   </head>
 
   <body>
@@ -66,7 +69,9 @@
           <li class="nav__item">
             <a href="#section_3" class="nav__link">Ponentes</a>
           </li>
-          <li class="nav__item"><a href="pages/timetable.html" class="nav__link">Calendario</a></li>
+          <li class="nav__item">
+            <a href="pages/timetable.html" class="nav__link">Calendario</a>
+          </li>
           <li class="nav__item">
             <a href="pages/form.html" class="nav__link">Formulario</a>
           </li>
@@ -405,7 +410,9 @@
               </p>
             </li>
           </ul>
-          <a href="#pricing-section" class="cs-button-solid">Comprar Entradas</a>
+          <a href="#pricing-section" class="cs-button-solid"
+            >Comprar Entradas</a
+          >
         </div>
       </div>
     </section>
@@ -455,7 +462,6 @@
                 a comprender y abordar los desafíos ambientales que enfrenta
                 nuestro planeta. ¡Una charla imperdible para amantes de la
                 ciencia y la sostenibilidad!
-
               </p>
             </div>
           </div>
@@ -534,10 +540,11 @@
                 especializado en vida salvaje. Explora las increíbles imágenes
                 de la vida marina y costera mientras descubres la importancia de
                 conservar nuestros ecosistemas naturales. ¡Una charla
-                inspiradora para amantes de la fotografía y la naturaleza!
-                No te la pierdas. Juan Carlos Millán es un fotógrafo de la naturaleza
-                especializado en vida salvaje. Ha trabajado en proyectos de conservación y
-                documentación de la vida marina y costera en todo el mundo.
+                inspiradora para amantes de la fotografía y la naturaleza! No te
+                la pierdas. Juan Carlos Millán es un fotógrafo de la naturaleza
+                especializado en vida salvaje. Ha trabajado en proyectos de
+                conservación y documentación de la vida marina y costera en todo
+                el mundo.
               </p>
             </div>
           </div>
@@ -562,9 +569,9 @@
                 ecosistemas costeros y la importancia de preservarlos. Descubre
                 cómo cada acción individual puede marcar la diferencia en la
                 protección de nuestro hogar, la Tierra. ¡Una charla inspiradora
-                para amantes de la naturaleza y la conservación!
-                Estudia la vida marina y costera en todo el mundo y trabaja en proyectos
-                de conservación y documentación de la vida marina y costera.
+                para amantes de la naturaleza y la conservación! Estudia la vida
+                marina y costera en todo el mundo y trabaja en proyectos de
+                conservación y documentación de la vida marina y costera.
               </p>
             </div>
           </div>
@@ -593,8 +600,9 @@
                 por las olas y la conexión única que experimentamos en el
                 océano. Descubre cómo el surf puede inspirarnos a cuidar nuestro
                 planeta y a vivir en armonía con la naturaleza. ¡Una charla
-                inspiradora para amantes del surf y la sostenibilidad! Una campeona de surf
-                que ha competido en torneos de surf en todo el mundo.
+                inspiradora para amantes del surf y la sostenibilidad! Una
+                campeona de surf que ha competido en torneos de surf en todo el
+                mundo.
               </p>
             </div>
           </div>
@@ -614,7 +622,10 @@
           <img src="images/logos/Billabong-logo.png" alt="marca Billabong" />
         </div>
         <div class="slide">
-          <img src="images/logos/quicksilver-logo.png" alt="marca quicksilver" />
+          <img
+            src="images/logos/quicksilver-logo.png"
+            alt="marca quicksilver"
+          />
         </div>
         <div class="slide">
           <img src="images/logos/Oakley_logo.svg.png" alt="marca Oakley" />
@@ -641,7 +652,10 @@
           <img src="images/logos/volcom-2.svg" alt="marca volcom" />
         </div>
         <div class="slide">
-          <img src="images/logos/ministerio-cultura-deporte.png" alt="marca ministerio-cultura-deporte" />
+          <img
+            src="images/logos/ministerio-cultura-deporte.png"
+            alt="marca ministerio-cultura-deporte"
+          />
         </div>
         <div class="slide">
           <img src="images/logos/nextgeneu_en.jpg" alt="marca nextgeneu" />
@@ -650,7 +664,10 @@
           <img src="images/logos/ods.jpg" alt="marca ods" />
         </div>
         <div class="slide">
-          <img src="images/logos/Ecosurf/eco-surf-logo-b-1.png" alt="marca eco-surf" />
+          <img
+            src="images/logos/Ecosurf/eco-surf-logo-b-1.png"
+            alt="marca eco-surf"
+          />
         </div>
         <div class="slide">
           <img src="images/logos/mahou_1200_color.png" alt="marca mahou" />
@@ -659,7 +676,7 @@
           <img src="images/logos/Gillette-logo.png" alt="marca Gillette" />
         </div>
         <div class="slide">
-          <img src="images/logos/GoPro_logo.svg.png" alt="marca GoPro"marca  />
+          <img src="images/logos/GoPro_logo.svg.png" alt="marca GoPro" marca />
         </div>
         <div class="slide">
           <img src="images/logos/aws-logo.png" alt="marca aws" />
@@ -668,7 +685,10 @@
           <img src="images/logos/North-Face-Logo.png" alt="marca North-Face" />
         </div>
         <div class="slide">
-          <img src="images/logos/ies_el_lago logo.jpg" alt="marca ies_el_lago" />
+          <img
+            src="images/logos/ies_el_lago logo.jpg"
+            alt="marca ies_el_lago"
+          />
         </div>
         <div class="slide">
           <img src="images/logos/prime-drink-logo.png" alt="marca prime" />
@@ -1106,12 +1126,7 @@
     <section id="contact">
       <div class="cs-container">
         <!--Form-->
-        <form
-          class="cs-form"
-          id="cs-form"
-          name="Contact Form"
-          method="post"
-        >
+        <form class="cs-form" id="cs-form" name="Contact Form" method="post">
           <div class="cs-content">
             <span class="cs-topper">Contáctanos</span>
             <h2 class="cs-title">Cualquier Duda</h2>
@@ -1301,5 +1316,82 @@
       </div>
     </footer>
 
+    <script>
+      function openTab(tabId) {
+        var tabs = document.querySelectorAll(".tab-pane");
+        tabs.forEach(function (tab) {
+          if (tab.id === tabId) {
+            tab.classList.add("active");
+          } else {
+            tab.classList.remove("active");
+          }
+        });
+      }
+
+      //seccion about
+
+      const faqItems = Array.from(document.querySelectorAll(".cs-faq-item"));
+      for (const item of faqItems) {
+        const onClick = () => {
+          item.classList.toggle("active");
+        };
+        item.addEventListener("click", onClick);
+      }
+
+      //Js para el navbar
+
+      // add classes for mobile navigation toggling
+      var CSbody = document.querySelector("body");
+      const CSnavbarMenu = document.querySelector("#cs-navigation");
+      const CShamburgerMenu = document.querySelector(
+        "#cs-navigation .cs-toggle"
+      );
+
+      CShamburgerMenu.addEventListener("click", function () {
+        CShamburgerMenu.classList.toggle("cs-active");
+        CSnavbarMenu.classList.toggle("cs-active");
+        CSbody.classList.toggle("cs-open");
+        // run the function to check the aria-expanded value
+        ariaExpanded();
+      });
+
+      // This script adds a class to the body after scrolling 100px
+      // and we used these body.scroll styles to create some on scroll
+      // animations with the navbar
+
+      document.addEventListener("scroll", (e) => {
+        const scroll = document.documentElement.scrollTop;
+        if (scroll >= 100) {
+          document.querySelector("body").classList.add("scroll");
+        } else {
+          document.querySelector("body").classList.remove("scroll");
+        }
+      });
+
+      // mobile nav toggle code
+      const dropDowns = Array.from(
+        document.querySelectorAll("#cs-navigation .cs-dropdown")
+      );
+      for (const item of dropDowns) {
+        const onClick = () => {
+          item.classList.toggle("cs-active");
+        };
+        item.addEventListener("click", onClick);
+      }
+
+      // contact form
+
+      const faqItems2 = Array.from(document.querySelectorAll(".cs-faq-item"));
+      for (const item of faqItems) {
+        const onClick = () => {
+          item.classList.toggle("active");
+        };
+        item.addEventListener("click", onClick);
+      }
+      const disapearSection = () => {
+        const section = document.querySelector(".cookies-section");
+        section.style.display = "none";
+      };
+    </script>
   </body>
 </html>
