--- a/version-actual/pages/form.html
+++ b/version-actual/pages/form.html
@@ -152,7 +152,7 @@
       </div>
     </section>
 
-    <section>
+    <section id="mapa">
       <!-- Mapa -->
       <iframe
         class="cs-img"
@@ -368,38 +368,38 @@
         <div class="footer-col">
           <h4>EcoSurf</h4>
           <ul>
-            <li><a href="#">Sobre Nosotros</a></li>
-            <li><a href="#">Actividades</a></li>
+            <li><a href="#why-choose-us">Sobre Nosotros</a></li>
+            <li><a href="#services">Actividades</a></li>
             <li><a href="#">Politica de Privacidad</a></li>
-            <li><a href="#">Voluntariado</a></li>
+            <li><a href="pages/form.html">Voluntariado</a></li>
           </ul>
         </div>
         <div class="footer-col">
           <h4>Necesitas ayuda?</h4>
           <ul>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Ubicación</a></li>
-            <li><a href="#">Calendario</a></li>
+            <li><a href="#contact">FAQ</a></li>
+            <li><a href="pages/form.html#mapa">Ubicación</a></li>
+            <li><a href="pages/timetable.html">Calendario</a></li>
             <li><a href="#">Devoluciones</a></li>
-            <li><a href="#">Consultas</a></li>
+            <li><a href="#contact">Consultas</a></li>
           </ul>
         </div>
         <div class="footer-col">
           <h4>Marcas</h4>
           <ul>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="#contact">Contacto</a></li>
             <li><a href="#">Prensa</a></li>
-            <li><a href="#">Inversores</a></li>
+            <li><a href="pages/form.html#mapa">Inversores</a></li>
             <li><a href="#">Gubernamental</a></li>
           </ul>
         </div>
         <div class="footer-col">
           <h4>Redes Sociales</h4>
           <div class="social-links">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.twitter.com/"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
           </div>
         </div>
       </div>
