formulario accesible con gradiente

--- a/version-actual/pages/form.html
+++ b/version-actual/pages/form.html
@@ -270,7 +270,10 @@
           </div>
 
           <button class="cs-button-solid cs-submit" type="submit">
-            Enviar Mensaje Ahora
+            Inscribirse al Evento
+          </button>
+          <button class="cs-button-solid reset-form" type="reset">
+            Resetear Formulario
           </button>
         </form>
 
