--- a/version-actual/index.html
+++ b/version-actual/index.html
@@ -1276,8 +1276,8 @@
             <li><a href="#contact">FAQ</a></li>
             <li><a href="pages/form.html#mapa">Ubicación</a></li>
             <li><a href="pages/timetable.html">Calendario</a></li>
-            <li><a href="#">Devoluciones</a></li>
-            <li><a href="#contact">Consultas</a></li>
+            <li><a href="pages/form.html#cs-contact">Registrate</a></li>
+            <li><a href="pages/timetable.html#video">Video informativo</a></li>
           </ul>
         </div>
         <div class="footer-col">
