--- a/version-actual/pages/timetable.html
+++ b/version-actual/pages/timetable.html
@@ -191,7 +191,7 @@
     <!--                   Video                     -->
     <!-- ============================================ -->
 
-    <section>
+    <section id="video">
       <h2 class="video-title">Video de Nuestro Sponsor DC</h2>
       <div class="video-container">
         <video controls>
@@ -229,28 +229,28 @@
         <div class="footer-col">
           <h4>EcoSurf</h4>
           <ul>
-            <li><a href="#why-choose-us">Sobre Nosotros</a></li>
-            <li><a href="#services">Actividades</a></li>
+            <li><a href="../index.html#why-choose-us">Sobre Nosotros</a></li>
+            <li><a href="../index.html#services">Actividades</a></li>
             <li><a href="#">Politica de Privacidad</a></li>
-            <li><a href="pages/form.html">Voluntariado</a></li>
+            <li><a href="form.html">Voluntariado</a></li>
           </ul>
         </div>
         <div class="footer-col">
           <h4>Necesitas ayuda?</h4>
           <ul>
             <li><a href="#contact">FAQ</a></li>
-            <li><a href="pages/form.html#mapa">Ubicación</a></li>
-            <li><a href="pages/timetable.html">Calendario</a></li>
-            <li><a href="#">Devoluciones</a></li>
-            <li><a href="#contact">Consultas</a></li>
+            <li><a href="form.html#mapa">Ubicación</a></li>
+            <li><a href="timetable.html">Calendario</a></li>
+            <li><a href="form.html#cs-contact">Registrate</a></li>
+            <li><a href="timetable.html#video">Video informativo</a></li>
           </ul>
         </div>
         <div class="footer-col">
           <h4>Marcas</h4>
           <ul>
-            <li><a href="#contact">Contacto</a></li>
+            <li><a href="../index.html#contact">Contacto</a></li>
             <li><a href="#">Prensa</a></li>
-            <li><a href="pages/form.html#mapa">Inversores</a></li>
+            <li><a href="form.html#mapa">Inversores</a></li>
             <li><a href="#">Gubernamental</a></li>
           </ul>
         </div>
