--- a/version-actual/pages/timetable.html
+++ b/version-actual/pages/timetable.html
@@ -238,7 +238,7 @@
         <div class="footer-col">
           <h4>Necesitas ayuda?</h4>
           <ul>
-            <li><a href="#contact">FAQ</a></li>
+            <li><a href="../index#contact">FAQ</a></li>
             <li><a href="form.html#mapa">Ubicación</a></li>
             <li><a href="timetable.html">Calendario</a></li>
             <li><a href="form.html#cs-contact">Registrate</a></li>
