--- a/version-actual/pages/form.html
+++ b/version-actual/pages/form.html
@@ -345,7 +345,7 @@
               loading="lazy"
               decoding="async"
               src="../images/stock/surfer-girl.jpg"
-              alt="google map"
+              alt="chica surfeando una ola en la playa con un bikini rosa y una tabla de surf del mismo color"
               width="462"
               height="438"
             />
